# ubik

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml  ubik.example.yaml
.github/workflows/: ci.yml  publish.yml
docs/: CNAME  architecture-explained.md  architecture.md  dns-setup.md  index.html  mcp-registry-submission.md  quickstart.md  recommendations.md  roadmap.md  stack.md  strategy.md
docs/.well-known/: mcp-server-card.json
research/: manifest.json
research/audit/: 2026-05-09-pssst-audit-gyibb.md  2026-05-09-pssst-audit-ubik.md
scripts/: oneshot_audit.py
tests/: test_codebase_read.py  test_config.py  test_daemon_guards.py  test_executor_aider.py  test_executor_claude_agent.py  test_factories.py  test_findings_extract.py  test_git_worktree.py  test_mcp_tools.py  test_notebook.py  test_orchestrator.py  test_paths.py  test_proposal_counter.py  test_proposal_store.py  test_scheduler.py  test_summarize.py  test_telegram_render.py  test_wizard.py
ubik/: cli.py
ubik/adapters/bridge/: __init__.py  base.py  telegram.py
ubik/adapters/executor/: __init__.py  aider.py  base.py  claude_agent.py
ubik/adapters/llm/: __init__.py  base.py  litellm_adapter.py
ubik/adapters/verifier/: __init__.py  base.py  github.py  gitlab.py
ubik/core/: config.py  daemon.py  notebook.py  orchestrator.py  paths.py  proposal.py  proposal_builder.py  proposal_counter.py  researcher.py  scheduler.py  summarize.py  wizard.py
ubik/mcp/: __init__.py  server.py
ubik/tools/: codebase_read.py  git.py
