[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "ubik"
version = "0.0.1"
description = "Pssssst! An AI resident engineer for your codebase."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Ubik" }
]
keywords = [
    "ai", "agent", "code-review", "mcp", "model-context-protocol",
    "autonomous", "developer-tools", "claude-code", "aider"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # CLI
    "typer>=0.12",
    "rich>=13.7",

    # LLM (vendor-agnostic)
    "litellm>=1.50",

    # Config + I/O
    "pyyaml>=6.0",
    "pydantic>=2.7",

    # Async + HTTP
    "httpx>=0.27",
    "anyio>=4.4",

    # MCP server (Anthropic SDK)
    # NOTE: optional install via `pip install ubik[mcp]` once it's stable
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
telegram = [
    "python-telegram-bot>=21.0",
]
all = [
    "ubik[mcp,telegram]",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/getubik/ubik"
Documentation = "https://github.com/getubik/ubik#readme"
Issues = "https://github.com/getubik/ubik/issues"
Source = "https://github.com/getubik/ubik"

[project.scripts]
ubik = "ubik.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ubik"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length is handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
